--- a/help/html/Animation/FbxExport.html
+++ b/help/html/Animation/FbxExport.html
@@ -13,7 +13,7 @@
   <nav class="nav_side">
     <div class="nav_side_search">
 	  <div class="logo_div">
-		  <img src="../../Resources/home_icon.png" width="23" height="20" alt=""/>
+		  <img src="../../Resources/home_icon.webp" width="23" height="20" alt=""/>
 		  <a href="../index.html" class="zuruTools_a">ZuruTools</a>
 	</div>
 	  <div>
@@ -61,7 +61,6 @@
 						}
 					}
 				</script>
-			<li class="menu_li"><a href="../Document.html" class="menu_a">Document</a></li>
 			<li class="menu_li"><a href="../Others/Others.html" class="menu_a">Others</a></li>
 		</ul>
 	</div>
@@ -91,7 +90,7 @@
 		  <div>
 			<h1>FbxExportTools</h1>
 			<p>FbxExportTools（FBX导出工具）让您快速编辑地导出fbx文件。您首先需要保存文件，选择需要导出的引用文件和摄像机，它会在该文件目录下新建一个文件夹来保存fbx文件。<br><br>
-				<img src="../../Resources/AN_43.png" width="650" height="356" alt="" id="display_img"/>
+				<img src="../../Resources/AN_43.webp" width="650" height="356" alt="" id="display_img"/>
 			  </p>
 			</div>
 			
@@ -105,7 +104,7 @@
 	</section>
 </div>
 <div id="img_page" class="img_backgroud">
-	<img src="../../Resources/AN_43.png" alt="" width="1957" height="1080"> </div>
+	<img src="../../Resources/AN_43.webp" alt="" width="1957" height="1080"> </div>
 <script>
 	var imge=document.getElementById("display_img")
 	var text_bk=document.querySelector("text_background");
