--- a/help/html/Animation/Playbast.html
+++ b/help/html/Animation/Playbast.html
@@ -13,7 +13,7 @@
   <nav class="nav_side">
     <div class="nav_side_search">
 	  <div class="logo_div">
-		  <img src="../../Resources/home_icon.png" width="23" height="20" alt=""/>
+		  <img src="../../Resources/home_icon.webp" width="23" height="20" alt=""/>
 		  <a href="../index.html" class="zuruTools_a">ZuruTools</a>
 	</div>
 	  <div>
@@ -61,7 +61,6 @@
 						}
 					}
 				</script>
-			<li class="menu_li"><a href="../Document.html" class="menu_a">Document</a></li>
 			<li class="menu_li"><a href="../Others/Others.html" class="menu_a">Others</a></li>
 		</ul>
 	</div>
@@ -91,7 +90,7 @@
 		  <div>
 			<h1>PlaybastTools</h1>
 			<p class="_p">动画拍屏工具更改您的拍屏界面信息，让您的提交更符合要求。<br>
-				<img src="../../Resources/AN_44.png" width="600" height="335" alt="" id="display_img"/>
+				<img src="../../Resources/AN_44.webp" width="600" height="335" alt="" id="display_img"/>
 			  </p>
 		  </div>
 			
@@ -105,7 +104,7 @@
 	</section>
 </div>
 <div id="img_page" class="img_backgroud">
-	<img src="../../Resources/AN_44.png" alt="" width="1957" height="1080"> </div>
+	<img src="../../Resources/AN_44.webp" alt="" width="1957" height="1080"> </div>
 <script>
 	var imge=document.getElementById("display_img")
 	var text_bk=document.querySelector("text_background");
