--- a/help/html/Tools/T_BCConstraint.html
+++ b/help/html/Tools/T_BCConstraint.html
@@ -12,7 +12,7 @@
   <nav class="nav_side">
     <div class="nav_side_search">
 	  <div class="logo_div">
-		  <img src="../../Resources/home_icon.png" width="23" height="20" alt=""/>
+		  <img src="../../Resources/home_icon.webp" width="23" height="20" alt=""/>
 		  <a href="../index.html" class="zuruTools_a">ZuruTools</a>
 	</div>
 	  <div>
@@ -58,7 +58,6 @@
 			<li class="menu_li"><a href="../Modeling/Modeling.html" class="menu_a">Modeling</a></li>
 			<li class="menu_li"><a href="../Rigging/Rigging.html" class="menu_a">Rigging</a></li>
 			<li class="menu_li"><a href="../Animation/Animation.html" class="menu_a">Animation</a></li>
-			<li class="menu_li"><a href="../Document.html" class="menu_a">Document</a></li>
 			<li class="menu_li"><a href="../Others/Others.html" class="menu_a">Others</a></li>
 		</ul>
 	</div>
@@ -88,7 +87,7 @@
 			<div>
 			<h1>BCConstraintTools</h1>
 			<p class="_p">BCConstraintTools(约束工具)集合了maya中约束方法，可以对物体进行但对多约束以及多对多约束。通过单选框选择约束方式（单对多或者多对多）点击左边的按钮加载约束物体，点击右边的按钮加载被约束物体。勾选复选框选择约束类型，这将会约束被约束物体所有的transform属性，点击Reset按钮将复选框重置为未勾选状态。<br><br>
-				<img src="../../Resources/BBC.png" alt="" width="600" height="338" id="display_img">
+				<img src="../../Resources/BBC.webp" alt="" width="600" height="338" id="display_img">
 			  </p>
 			</div>
 		</div>
@@ -102,7 +101,7 @@
 	</section>
 </div>
 <div id="img_page" class="img_backgroud">
-<img src="../../Resources/BBC.png" alt="" width="1959" height="1091"> </div>
+<img src="../../Resources/BBC.webp" alt="" width="1959" height="1091"> </div>
 <script>
 	var imge=document.getElementById("display_img")
 	var text_bk=document.querySelector("text_background");
