--- a/help/html/Tools/T_Rename.html
+++ b/help/html/Tools/T_Rename.html
@@ -12,7 +12,7 @@
   <nav class="nav_side">
     <div class="nav_side_search">
 	  <div class="logo_div">
-		  <img src="../../Resources/home_icon.png" width="23" height="20" alt=""/>
+		  <img src="../../Resources/home_icon.webp" width="23" height="20" alt=""/>
 		  <a href="../index.html" class="zuruTools_a">ZuruTools</a>
 	</div>
 	  <div>
@@ -58,7 +58,6 @@
 			<li class="menu_li"><a href="../Modeling/Modeling.html" class="menu_a">Modeling</a></li>
 			<li class="menu_li"><a href="../Rigging/Rigging.html" class="menu_a">Rigging</a></li>
 			<li class="menu_li"><a href="../Animation/Animation.html" class="menu_a">Animation</a></li>
-			<li class="menu_li"><a href="../Document.html" class="menu_a">Document</a></li>
 			<li class="menu_li"><a href="../Others/Others.html" class="menu_a">Others</a></li>
 		</ul>
 	</div>
@@ -88,7 +87,7 @@
 			<div>
 			<h1>RenameTools</h1>
 			<p class="_p">RenameTools(重命名工具)具有批量修改maya内物体的名称、给名称增加前后缀、选择添加固定后缀以及修改首字母为大写等等功能。<br><br>
-				<img src="../../Resources/RN.png" alt="" width="600" height="338" id="display_img"/>
+				<img src="../../Resources/RN.webp" alt="" width="600" height="338" id="display_img"/>
 				 </p>
 			</div>
 		</div>
@@ -101,7 +100,7 @@
 	</section>
 </div>
 <div id="img_page" class="img_backgroud">
-	<img src="../../Resources/RN.png" alt="" width="1959" height="1091"> </div>
+	<img src="../../Resources/RN.webp" alt="" width="1959" height="1091"> </div>
 <script>
 	var imge=document.getElementById("display_img")
 	var text_bk=document.querySelector("text_background");
