--- a/help/html_EN/Modeling/Asset.html
+++ b/help/html_EN/Modeling/Asset.html
@@ -12,7 +12,7 @@
   <nav class="nav_side">
     <div class="nav_side_search">
 	  <div class="logo_div">
-		  <img src="../../Resources/home_icon.png" width="23" height="20" alt=""/>
+		  <img src="../../Resources/home_icon.webp" width="23" height="20" alt=""/>
 		  <a href="../index.html" class="zuruTools_a">ZuruTools</a>
 	</div>
 	  <div>
@@ -57,7 +57,6 @@
 				</script>
 			<li class="menu_li"><a href="../Rigging/Rigging.html" class="menu_a">Rigging</a></li>
 			<li class="menu_li"><a href="../Animation/Animation.html" class="menu_a">Animation</a></li>
-			<li class="menu_li"><a href="../Document.html" class="menu_a">Document</a></li>
 			<li class="menu_li"><a href="../Others/Others.html" class="menu_a">Others</a></li>
 		</ul>
 	</div>
@@ -86,7 +85,7 @@
 		<div class="content">
 		  <div>
 			<h1>AssetTools</h1>
-			<p class="_p">AssetTools is a tool for Zuru's asset library, which includes two main modules: model assets and rigging assets for Zuru projects. Each module's assets are further divided into characters, props, and environments. You can right-click on the asset you want to import and select the import method to import the asset. You can also submit assets with this tool.<br><br><br><img src="../../Resources/EN_AL.png" width="650" height="360" alt="" id="display_img"/>
+			<p class="_p">AssetTools is a tool for Zuru's asset library, which includes two main modules: model assets and rigging assets for Zuru projects. Each module's assets are further divided into characters, props, and environments. You can right-click on the asset you want to import and select the import method to import the asset. You can also submit assets with this tool.<br><br><br><img src="../../Resources/EN_AL.webp" width="650" height="360" alt="" id="display_img"/>
 			</p>
 			</div>
 		</div>
@@ -99,7 +98,7 @@
 	</section>
 </div>
 <div id="img_page" class="img_backgroud">
-<img src="../../Resources/EN_AL.png" alt="" width="1606" height="900"> </div>
+<img src="../../Resources/EN_AL.webp" alt="" width="1606" height="900"> </div>
 <script>
 	var imge=document.getElementById("display_img")
 	var text_bk=document.querySelector("text_background");
