--- a/help/html_EN/index.html
+++ b/help/html_EN/index.html
@@ -12,7 +12,7 @@
   <nav class="nav_side">
     <div class="nav_side_search">
 	  <div class="logo_div">
-		  <img src="../Resources/home_icon.png" width="23" height="20" alt=""/>
+		  <img src="../Resources/home_icon.webp" width="23" height="20" alt=""/>
 		  <a href="index.html" class="zuruTools_a">ZuruTools</a>
 	</div>
 	  <div>
@@ -27,7 +27,6 @@
 			<li class="menu_li"><a href="Modeling/Modeling.html" class="menu_a">Modeling</a></li>
 			<li class="menu_li"><a href="Rigging/Rigging.html" class="menu_a">Rigging</a></li>
 			<li class="menu_li"><a href="Animation/Animation.html" class="menu_a">Animation</a></li>
-			<li class="menu_li"><a href="Document.html" class="menu_a">Document</a></li>
 			<li class="menu_li"><a href="Others/Others.html" class="menu_a">Others</a></li>
 		</ul>
 	</div>
@@ -77,7 +76,6 @@
 			  	<li class="doc_content_li_02"><a href="Animation/FbxExport.html">FBX Export Tools</a></li>
 			  </ul>
 		    </li>
-		  	<li class="doc_content_li_01"><a href="Document.html">Document</a></li>
 		  	<li class="doc_content_li_01"><a href="Others/Others.html">Others</a>
 			  <ul class="doc_content_ul_02">
 			  	<li class="doc_content_li_02"><a href="Others/kitsuLogin.html">Kitsu Task Login</a></li>
