--- a/help/html/Animation/StudioLibrary.html
+++ b/help/html/Animation/StudioLibrary.html
@@ -13,7 +13,7 @@
   <nav class="nav_side">
     <div class="nav_side_search">
 	  <div class="logo_div">
-		  <img src="../../Resources/home_icon.png" width="23" height="20" alt=""/>
+		  <img src="../../Resources/home_icon.webp" width="23" height="20" alt=""/>
 		  <a href="../index.html" class="zuruTools_a">ZuruTools</a>
 	</div>
 	  <div>
@@ -61,7 +61,6 @@
 						}
 					}
 				</script>
-			<li class="menu_li"><a href="../Document.html" class="menu_a">Document</a></li>
 			<li class="menu_li"><a href="../Others/Others.html" class="menu_a">Others</a></li>
 		</ul>
 	</div>
@@ -91,7 +90,7 @@
 		  <div>
 			<h1>StudioLibrary</h1>
 			<p class="_p">StudioLibrary是动作库,你可以使用它来添加pose、添加动画等。
-				<img src="../../Resources/SL.png" width="600" height="414" alt="" id="display_img"/>
+				<img src="../../Resources/SL.webp" width="600" height="414" alt="" id="display_img"/>
 			  </p>
 			</div>
 			
@@ -105,7 +104,7 @@
 	</section>
 </div>
 <div id="img_page" class="img_backgroud">
-	<img src="../../Resources/SL.png" alt="" width="1410" height="962"> </div>
+	<img src="../../Resources/SL.webp" alt="" width="1410" height="962"> </div>
 <script>
 	var imge=document.getElementById("display_img")
 	var text_bk=document.querySelector("text_background");
