--- a/help/html/Modeling/Asset.html
+++ b/help/html/Modeling/Asset.html
@@ -12,7 +12,7 @@
   <nav class="nav_side">
     <div class="nav_side_search">
 	  <div class="logo_div">
-		  <img src="../../Resources/home_icon.png" width="23" height="20" alt=""/>
+		  <img src="../../Resources/home_icon.webp" width="23" height="20" alt=""/>
 		  <a href="../index.html" class="zuruTools_a">ZuruTools</a>
 	</div>
 	  <div>
@@ -57,7 +57,6 @@
 				</script>
 			<li class="menu_li"><a href="../Rigging/Rigging.html" class="menu_a">Rigging</a></li>
 			<li class="menu_li"><a href="../Animation/Animation.html" class="menu_a">Animation</a></li>
-			<li class="menu_li"><a href="../Document.html" class="menu_a">Document</a></li>
 			<li class="menu_li"><a href="../Others/Others.html" class="menu_a">Others</a></li>
 		</ul>
 	</div>
@@ -86,7 +85,7 @@
 		<div class="content">
 		  <div>
 			<h1>AssetTools</h1>
-			<p class="_p">AssetTools工具是zuru的资产库工具，里面包括了zuru项目的模型资产和绑定资产两大模块，每个模块的资产又分为角色、道具和场景。你可以在想要导入的资产上单机右键选择导入方式导入资产。也可以在此提交资产。<br><br><br><img src="../../Resources/AL.png" width="650" height="360" alt="" id="display_img"/>
+			<p class="_p">AssetTools工具是zuru的资产库工具，里面包括了zuru项目的模型资产和绑定资产两大模块，每个模块的资产又分为角色、道具和场景。你可以在想要导入的资产上单机右键选择导入方式导入资产。也可以在此提交资产。<br><br><br><img src="../../Resources/AL.webp" width="650" height="360" alt="" id="display_img"/>
 			</p>
 			</div>
 		</div>
@@ -99,7 +98,7 @@
 	</section>
 </div>
 <div id="img_page" class="img_backgroud">
-	<img src="../../Resources/AL.png" alt="" width="1959" height="1091"> </div>
+	<img src="../../Resources/AL.webp" alt="" width="1959" height="1091"> </div>
 <script>
 	var imge=document.getElementById("display_img")
 	var text_bk=document.querySelector("text_background");
