--- a/help/html/Others/kitsuManager.html
+++ b/help/html/Others/kitsuManager.html
@@ -13,7 +13,7 @@
   <nav class="nav_side">
     <div class="nav_side_search">
 	  <div class="logo_div">
-		  <img src="../../Resources/home_icon.png" width="23" height="20" alt=""/>
+		  <img src="../../Resources/home_icon.webp" width="23" height="20" alt=""/>
 		  <a href="../index.html" class="zuruTools_a">ZuruTools</a>
 	</div>
 	  <div>
@@ -28,7 +28,6 @@
 			<li class="menu_li"><a href="../Modeling/Modeling.html" class="menu_a">Modeling</a></li>
 			<li class="menu_li"><a href="../Rigging/Rigging.html" class="menu_a">Rigging</a></li>
 			<li class="menu_li"><a href="../Animation/Animation.html" class="menu_a">Animation</a></li>
-			<li class="menu_li"><a href="../Document.html" class="menu_a">Document</a></li>
 		  <li class="menu_spread_li_off">
 				<div class="menu_spread_top">
 				<span class="menu_spread_span"></span>
@@ -90,7 +89,7 @@
 		  <div>
 			<h1>KitsuTaskManager</h1>
 			<p>KitsuTaskManager是kitsu的任务管理器，登录后您可以在此查看您的任务等相关信息，也可以在此提交文件<br><br>
-				<img src="../../Resources/KS62_Task.png" width="650" height="412" alt="" id="display_img"/>
+				<img src="../../Resources/KS62_Task.webp" width="650" height="412" alt="" id="display_img"/>
 			  </p>
 			</div>
 		</div>
@@ -103,7 +102,7 @@
 	</section>
 </div>
 <div id="img_page" class="img_backgroud">
-	<img src="../../Resources/KS62_Task.png" alt="" width="1755" height="1100"> </div>
+	<img src="../../Resources/KS62_Task.webp" alt="" width="1755" height="1100"> </div>
 <script>
 	var imge=document.getElementById("display_img")
 	var text_bk=document.querySelector("text_background");
