--- a/help/html/Rigging/Adv.html
+++ b/help/html/Rigging/Adv.html
@@ -13,7 +13,7 @@
   <nav class="nav_side">
     <div class="nav_side_search">
 	  <div class="logo_div">
-		  <img src="../../Resources/home_icon.png" width="23" height="20" alt=""/>
+		  <img src="../../Resources/home_icon.webp" width="23" height="20" alt=""/>
 		  <a href="../index.html" class="zuruTools_a">ZuruTools</a>
 	</div>
 	  <div>
@@ -59,7 +59,6 @@
 					}
 				</script>
 			<li class="menu_li"><a href="../Animation/Animation.html" class="menu_a">Animation</a></li>
-			<li class="menu_li"><a href="../Document.html" class="menu_a">Document</a></li>
 			<li class="menu_li"><a href="../Others/Others.html" class="menu_a">Others</a></li>
 		</ul>
 	</div>
@@ -88,7 +87,7 @@
 			<div class="content">
 			<div>
 			<h1>AdvancedTools</h1>
-			<p class="_p">AdvTools可以调出AdvancedSkelecton绑定系统，使您的绑定过程更方便快捷<br><br><img src="../../Resources/ADV.png" alt="" width="288" height="573" class="center_img" id="display_img"/></p>
+			<p class="_p">AdvTools可以调出AdvancedSkelecton绑定系统，使您的绑定过程更方便快捷<br><br><img src="../../Resources/ADV.webp" alt="" width="288" height="573" class="center_img" id="display_img"/></p>
 			</div>
 			
 		</div>
@@ -101,7 +100,7 @@
 	</section>
 </div>
 <div id="img_page" class="img_backgroud">
-	<img src="../../Resources/ADV.png" alt="" width="504" height="1000"> </div>
+	<img src="../../Resources/ADV.webp" alt="" width="504" height="1000"> </div>
 <script>
 	var imge=document.getElementById("display_img")
 	var text_bk=document.querySelector("text_background");
