--- a/help/html_EN/Animation/Playbast.html
+++ b/help/html_EN/Animation/Playbast.html
@@ -13,7 +13,7 @@
   <nav class="nav_side">
     <div class="nav_side_search">
 	  <div class="logo_div">
-		  <img src="../../Resources/home_icon.png" width="23" height="20" alt=""/>
+		  <img src="../../Resources/home_icon.webp" width="23" height="20" alt=""/>
 		  <a href="../index.html" class="zuruTools_a">ZuruTools</a>
 	</div>
 	  <div>
@@ -61,7 +61,6 @@
 						}
 					}
 				</script>
-			<li class="menu_li"><a href="../Document.html" class="menu_a">Document</a></li>
 			<li class="menu_li"><a href="../Others/Others.html" class="menu_a">Others</a></li>
 		</ul>
 	</div>
@@ -90,7 +89,7 @@
 		<div class="content">
 		  <div>
 			<h1>PlaybastTools</h1>
-			<p class="_p">The animation playbastTools allows you to modify the information displayed in your screen, making your submissions more compliant with requirements.<br><img src="../../Resources/EN_AN_44.png" width="600" height="335" alt="" id="display_img"/>
+			<p class="_p">The animation playbastTools allows you to modify the information displayed in your screen, making your submissions more compliant with requirements.<br><img src="../../Resources/EN_AN_44.webp" width="600" height="335" alt="" id="display_img"/>
 			  </p>
 		  </div>
 			
@@ -104,7 +103,7 @@
 	</section>
 </div>
 <div id="img_page" class="img_backgroud">
-<img src="../../Resources/EN_AN_44.png" alt="" width="1625" height="900"> </div>
+<img src="../../Resources/EN_AN_44.webp" alt="" width="1625" height="900"> </div>
 <script>
 	var imge=document.getElementById("display_img")
 	var text_bk=document.querySelector("text_background");
