--- a/help/html_EN/Others/Others.html
+++ b/help/html_EN/Others/Others.html
@@ -13,7 +13,7 @@
   <nav class="nav_side">
     <div class="nav_side_search">
 	  <div class="logo_div">
-		  <img src="../../Resources/home_icon.png" width="23" height="20" alt=""/>
+		  <img src="../../Resources/home_icon.webp" width="23" height="20" alt=""/>
 		  <a href="../index.html" class="zuruTools_a">ZuruTools</a>
 	</div>
 	  <div>
@@ -28,7 +28,6 @@
 			<li class="menu_li"><a href="../Modeling/Modeling.html" class="menu_a">Modeling</a></li>
 			<li class="menu_li"><a href="../Rigging/Rigging.html" class="menu_a">Rigging</a></li>
 			<li class="menu_li"><a href="../Animation/Animation.html" class="menu_a">Animation</a></li>
-			<li class="menu_li"><a href="../Document.html" class="menu_a">Document</a></li>
 		  <li class="menu_spread_li_off">
 				<div class="menu_spread_top">
 				<span class="menu_spread_span"></span>
