--- a/help/html_EN/Others/kitsuLogin.html
+++ b/help/html_EN/Others/kitsuLogin.html
@@ -13,7 +13,7 @@
   <nav class="nav_side">
     <div class="nav_side_search">
 	  <div class="logo_div">
-		  <img src="../../Resources/home_icon.png" width="23" height="20" alt=""/>
+		  <img src="../../Resources/home_icon.webp" width="23" height="20" alt=""/>
 		  <a href="../index.html" class="zuruTools_a">ZuruTools</a>
 	</div>
 	  <div>
@@ -28,7 +28,6 @@
 			<li class="menu_li"><a href="../Modeling/Modeling.html" class="menu_a">Modeling</a></li>
 			<li class="menu_li"><a href="../Rigging/Rigging.html" class="menu_a">Rigging</a></li>
 			<li class="menu_li"><a href="../Animation/Animation.html" class="menu_a">Animation</a></li>
-			<li class="menu_li"><a href="../Document.html" class="menu_a">Document</a></li>
 		  <li class="menu_spread_li_off">
 				<div class="menu_spread_top">
 				<span class="menu_spread_span"></span>
@@ -89,7 +88,7 @@
 		<div class="content">
 		  <div>
 			<h1>KitsuTaskLogin</h1>
-			<p>KitsuTaskLogin is the login interface for Kitsu, where you can enter your Kitsu email and password to log in.<br><br><img src="../../Resources/EN_KS61_Login.png" alt="" width="650" height="562" id="display_img"/>
+			<p>KitsuTaskLogin is the login interface for Kitsu, where you can enter your Kitsu email and password to log in.<br><br><img src="../../Resources/EN_KS61_Login.webp" alt="" width="650" height="562" id="display_img"/>
 			  </p>
 			</div>
 		</div>
@@ -102,7 +101,7 @@
 	</section>
 </div>
 <div id="img_page" class="img_backgroud">
-<img src="../../Resources/EN_KS61_Login.png" alt="" width="1155" height="1000"> </div>
+<img src="../../Resources/EN_KS61_Login.webp" alt="" width="1155" height="1000"> </div>
 <script>
 	var imge=document.getElementById("display_img")
 	var text_bk=document.querySelector("text_background");
