--- a/help/html_EN/Rigging/Controls.html
+++ b/help/html_EN/Rigging/Controls.html
@@ -13,7 +13,7 @@
   <nav class="nav_side">
     <div class="nav_side_search">
 	  <div class="logo_div">
-		  <img src="../../Resources/home_icon.png" width="23" height="20" alt=""/>
+		  <img src="../../Resources/home_icon.webp" width="23" height="20" alt=""/>
 		  <a href="../index.html" class="zuruTools_a">ZuruTools</a>
 	</div>
 	  <div>
@@ -59,7 +59,6 @@
 					}
 				</script>
 			<li class="menu_li"><a href="../Animation/Animation.html" class="menu_a">Animation</a></li>
-			<li class="menu_li"><a href="../Document.html" class="menu_a">Document</a></li>
 			<li class="menu_li"><a href="../Others/Others.html" class="menu_a">Others</a></li>
 		</ul>
 	</div>
@@ -89,7 +88,7 @@
 			<div>
 			<h1>ControlTools</h1>
 			<p class="_p">ControlTools is a tool that helps riggers generate controllers, replace controllers, modify controller colors, etc.
-				<br><br><img src="../../Resources/EN_CT.png" width="600" height="230" alt="" id="display_img"/>
+				<br><br><img src="../../Resources/EN_CT.webp" width="600" height="230" alt="" id="display_img"/>
 				</p>
 			</div>
 		</div>
@@ -102,7 +101,7 @@
 	</section>
 </div>
 <div id="img_page" class="img_backgroud">
-<img src="../../Resources/EN_CT.png" alt="" width="1725" height="653"> </div>
+<img src="../../Resources/EN_CT.webp" alt="" width="1725" height="653"> </div>
 <script>
 	var imge=document.getElementById("display_img")
 	var text_bk=document.querySelector("text_background");
