--- a/help/html/Animation/Playblast.html
+++ b/help/html/Animation/Playblast.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>PlaybastTools</title>
+<title>playblastTools</title>
 <script type="text/javascript" src="../html5.js"></script>
 <link href="../../css/stylecommon.css" rel="stylesheet" type="text/css">
 <link href="../../css/style_each.css" rel="stylesheet" type="text/css">
@@ -13,7 +13,6 @@
   <nav class="nav_side">
     <div class="nav_side_search">
 	  <div class="logo_div">
-		  <img src="../../Resources/home_icon.webp" width="23" height="20" alt=""/>
 		  <a href="../index.html" class="zuruTools_a">ZuruTools</a>
 	</div>
 	  <div>
@@ -35,7 +34,7 @@
 				<ul class="menu_spread_ul">
 				    <li class="menu_spread_li02"><a href="StudioLibrary.html" class="menu_spread_a">StudioLibrary&#62;&#62;动作库</a></li>
 				    <li class="menu_spread_li02"><a href="AnimationCheck.html" class="menu_spread_a">AnimationCheckTools&#62;&#62;动画检查工具</a></li>
-					<li class="menu_spread_li02"><a href="Playbast.html" class="menu_current_item">PlaybastTools&#62;&#62;动画拍屏工具</a></li>
+					<li class="menu_spread_li02"><a href="playblast.html" class="menu_current_item">playblastTools&#62;&#62;动画拍屏工具</a></li>
 					<li class="menu_spread_li02"><a href="FbxExport.html" class="menu_spread_a">FBXExportTools&#62;&#62;Fbx导出工具</a></li>
 			  </ul>
 		  </li>
@@ -78,9 +77,9 @@
 				  <a href="Animation.html">Animation</a>
 				  &#62;
 			  </li>
-			  <li class="nav_content_top_li">PlaybastTools</li>
+			  <li class="nav_content_top_li">playblastTools</li>
 			  <li  class="nav_language_li">
-				  <a href="../../html_EN/Animation/Playbast.html">Translate</a>
+				  <a href="../../html_EN/Animation/playblast.html">Translate</a>
 			  </li>
 			  <li></li>
 		  </ul>
@@ -88,7 +87,7 @@
 		  </div>
 		<div class="content">
 		  <div>
-			<h1>PlaybastTools</h1>
+			<h1>playblastTools</h1>
 			<p class="_p">动画拍屏工具更改您的拍屏界面信息，让您的提交更符合要求。<br>
 				<img src="../../Resources/AN_44.webp" width="600" height="335" alt="" id="display_img"/>
 			  </p>
