--- a/help/html_EN/Animation/Playblast.html
+++ b/help/html_EN/Animation/Playblast.html
@@ -2,18 +2,17 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>PlaybastTools</title>
+<title>playblastTools</title>
 <script type="text/javascript" src="../html5.js"></script>
 <link href="../../css/stylecommon.css" rel="stylesheet" type="text/css">
 <link href="../../css/style_each.css" rel="stylesheet" type="text/css">
 </head>
 
 <body>
-<div>
+<div class="text_background">
   <nav class="nav_side">
     <div class="nav_side_search">
 	  <div class="logo_div">
-		  <img src="../../Resources/home_icon.webp" width="23" height="20" alt=""/>
 		  <a href="../index.html" class="zuruTools_a">ZuruTools</a>
 	</div>
 	  <div>
@@ -35,7 +34,7 @@
 				<ul class="menu_spread_ul">
 				    <li class="menu_spread_li02"><a href="StudioLibrary.html" class="menu_spread_a">StudioLibrary</a></li>
 				    <li class="menu_spread_li02"><a href="AnimationCheck.html" class="menu_spread_a">AnimationCheckTools</a></li>
-					<li class="menu_spread_li02"><a href="Playbast.html" class="menu_current_item">PlaybastTools</a></li>
+					<li class="menu_spread_li02"><a href="playblast.html" class="menu_current_item">playblastTools</a></li>
 					<li class="menu_spread_li02"><a href="FbxExport.html" class="menu_spread_a">FBXExportTools</a></li>
 			  </ul>
 		  </li>
@@ -78,9 +77,9 @@
 				  <a href="Animation.html">Animation</a>
 				  &#62;
 			  </li>
-			  <li class="nav_content_top_li">PlaybastTools</li>
+			  <li class="nav_content_top_li">playblastTools</li>
 			  <li  class="nav_language_li">
-				  <a href="../../html/Animation/Playbast.html">翻译</a>
+				  <a href="../../html/Animation/playblast.html">翻译</a>
 			  </li>
 			  <li></li>
 		  </ul>
@@ -88,8 +87,8 @@
 		  </div>
 		<div class="content">
 		  <div>
-			<h1>PlaybastTools</h1>
-			<p class="_p">The animation playbastTools allows you to modify the information displayed in your screen, making your submissions more compliant with requirements.<br><img src="../../Resources/EN_AN_44.webp" width="600" height="335" alt="" id="display_img"/>
+			<h1>playblastTools</h1>
+			<p class="_p">The animation playblastTools allows you to modify the information displayed in your screen, making your submissions more compliant with requirements.<br><img src="../../Resources/EN_AN_44.webp" width="600" height="335" alt="" id="display_img"/>
 			  </p>
 		  </div>
 			
