--- a/help/html_EN/index.html
+++ b/help/html_EN/index.html
@@ -8,11 +8,11 @@
 </head>
 
 <body>
-<div>
+<div class="text_background">
   <nav class="nav_side">
     <div class="nav_side_search">
 	  <div class="logo_div">
-		  <img src="../Resources/home_icon.webp" width="23" height="20" alt=""/>
+		  
 		  <a href="index.html" class="zuruTools_a">ZuruTools</a>
 	</div>
 	  <div>
@@ -72,7 +72,7 @@
 			  <ul class="doc_content_ul_02">
 			  	<li class="doc_content_li_02"><a href="Animation/StudioLibrary.html">StudioLibrary</a></li>
 			  	<li class="doc_content_li_02"><a href="Animation/AnimationCheck.html">AnimationCheck Tools</a></li>
-			  	<li class="doc_content_li_02"><a href="Animation/Playbast.html">Playbast Tools</a></li>
+			  	<li class="doc_content_li_02"><a href="Animation/playblast.html">playblast Tools</a></li>
 			  	<li class="doc_content_li_02"><a href="Animation/FbxExport.html">FBX Export Tools</a></li>
 			  </ul>
 		    </li>
@@ -94,5 +94,6 @@
     </div>
   </section>
 </div>
+
 </body>
 </html>
