--- a/index.html
+++ b/index.html
@@ -2,17 +2,17 @@
 <html>
 <head>
 <meta charset="utf-8">
+<meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=0.5,maximum-scale=2.0,user-scal">
 <title>index</title>
 <link href="help/css/stylecommon.css" rel="stylesheet" type="text/css">
 <link href="help/css/style_each.css" rel="stylesheet" type="text/css">
 </head>
 
 <body>
-<div>
+<div class="text_background">
   <nav class="nav_side">
     <div class="nav_side_search">
 	  <div class="logo_div">
-		  <img src="help/Resources/home_icon.webp" width="23" height="20" alt=""/>
 		  <a href="index.html" class="zuruTools_a">ZuruTools</a>
 	</div>
 	  <div>
@@ -72,7 +72,7 @@
 			  <ul class="doc_content_ul_02">
 			  	<li class="doc_content_li_02"><a href="help/html/Animation/StudioLibrary.html">StudioLibrary&#62;&#62;动作库</a></li>
 			  	<li class="doc_content_li_02"><a href="help/html/Animation/AnimationCheck.html">AnimationCheck Tools&#62;&#62;动画检查工具</a></li>
-			  	<li class="doc_content_li_02"><a href="help/html/Animation/Playbast.html">Playbast Tools&#62;&#62;动画拍屏工具</a></li>
+			  	<li class="doc_content_li_02"><a href="help/html/Animation/playblast.html">playblast Tools&#62;&#62;动画拍屏工具</a></li>
 			  	<li class="doc_content_li_02"><a href="help/html/Animation/FbxExport.html">FBX Export Tools&#62;&#62;Fbx导出工具</a></li>
 			  </ul>
 		    </li>
