--- a/help/html/Animation/AnimationCheck.html
+++ b/help/html/Animation/AnimationCheck.html
@@ -9,11 +9,10 @@
 </head>
 
 <body>
-<div>
+<div class="text_background">
   <nav class="nav_side">
     <div class="nav_side_search">
 	  <div class="logo_div">
-		  <img src="../../Resources/home_icon.webp" width="23" height="20" alt=""/>
 		  <a href="../index.html" class="zuruTools_a">ZuruTools</a>
 	</div>
 	  <div>
@@ -35,7 +34,7 @@
 				<ul class="menu_spread_ul">
 				    <li class="menu_spread_li02"><a href="StudioLibrary.html" class="menu_spread_a">StudioLibrary&#62;&#62;动作库</a></li>
 				    <li class="menu_spread_li02"><a href="AnimationCheck.html" class="menu_current_item">AnimationCheckTools&#62;&#62;动画检查工具</a></li>
-					<li class="menu_spread_li02"><a href="Playbast.html" class="menu_spread_a">PlaybastTools&#62;&#62;动画拍屏工具</a></li>
+					<li class="menu_spread_li02"><a href="playblast.html" class="menu_spread_a">playblastTools&#62;&#62;动画拍屏工具</a></li>
 					<li class="menu_spread_li02"><a href="FbxExport.html" class="menu_spread_a">FBXExportTools&#62;&#62;Fbx导出工具</a></li>
 			  </ul>
 		  </li>
