--- a/help/html/Rigging/Adv.html
+++ b/help/html/Rigging/Adv.html
@@ -13,7 +13,6 @@
   <nav class="nav_side">
     <div class="nav_side_search">
 	  <div class="logo_div">
-		  <img src="../../Resources/home_icon.webp" width="23" height="20" alt=""/>
 		  <a href="../index.html" class="zuruTools_a">ZuruTools</a>
 	</div>
 	  <div>
@@ -78,7 +77,7 @@
 			  </li>
 			  <li class="nav_content_top_li">AdvancedTools</li>
 			 <li  class="nav_language_li">
-				  <a href="../../html/Rigging/Adv.html">Translate</a>
+				  <a href="../../html_EN/Rigging/Adv.html">Translate</a>
 			  </li>
 			  <li></li>
 		  </ul>
