--- a/help/html/index.html
+++ b/help/html/index.html
@@ -8,11 +8,11 @@
 </head>
 
 <body>
-<div>
+<div class="text_background">
   <nav class="nav_side">
     <div class="nav_side_search">
 	  <div class="logo_div">
-		  <img src="../Resources/home_icon.webp" width="23" height="20" alt=""/>
+		  
 		  <a href="index.html" class="zuruTools_a">ZuruTools</a>
 	</div>
 	  <div>
@@ -72,7 +72,7 @@
 			  <ul class="doc_content_ul_02">
 			  	<li class="doc_content_li_02"><a href="Animation/StudioLibrary.html">StudioLibrary&#62;&#62;动作库</a></li>
 			  	<li class="doc_content_li_02"><a href="Animation/AnimationCheck.html">AnimationCheck Tools&#62;&#62;动画检查工具</a></li>
-			  	<li class="doc_content_li_02"><a href="Animation/Playbast.html">Playbast Tools&#62;&#62;动画拍屏工具</a></li>
+			  	<li class="doc_content_li_02"><a href="Animation/playblast.html">playblast Tools&#62;&#62;动画拍屏工具</a></li>
 			  	<li class="doc_content_li_02"><a href="Animation/FbxExport.html">FBX Export Tools&#62;&#62;Fbx导出工具</a></li>
 			  </ul>
 		    </li>
