--- a/help/html_EN/Others/Others.html
+++ b/help/html_EN/Others/Others.html
@@ -9,11 +9,10 @@
 </head>
 
 <body>
-<div>
+<div class="text_background">
   <nav class="nav_side">
     <div class="nav_side_search">
 	  <div class="logo_div">
-		  <img src="../../Resources/home_icon.webp" width="23" height="20" alt=""/>
 		  <a href="../index.html" class="zuruTools_a">ZuruTools</a>
 	</div>
 	  <div>
