updata asset library 1.0 doc

--- a/help/html_EN/Modeling/Asset.html
+++ b/help/html_EN/Modeling/Asset.html
@@ -30,6 +30,7 @@
 				</div>
 				<ul class="menu_spread_ul">
 				  <li class="menu_spread_li02"><a href="" class="menu_spread_a">AssetTools</a></li>
+				  <li class="menu_spread_li02"><a href="" class="menu_current_item">AssetLibrary</a></li>
 			  </ul>
 		  </li>
 			<script>
@@ -74,8 +75,10 @@
 				  &#62;
 			  </li>
 			  <li class="nav_content_top_li">AssetTools</li>
+			  <li class="nav_content_top_li">AssetLibrary</li>
 			  <li  class="nav_language_li">
 				  <a href="../../html/Modeling/Asset.html">翻译</a>
+				  <a href="../../html/Modeling/AssetLibrary.html">翻译</a>
 			  </li>
 			  <li></li>
 		  </ul>
