--- a/help/html_EN/Modeling/Modeling.html
+++ b/help/html_EN/Modeling/Modeling.html
@@ -30,6 +30,7 @@
 				</div>
 				<ul class="menu_spread_ul">
 				  <li class="menu_spread_li02"><a href="Asset.html" class="menu_spread_a">AssetTools</a></li>
+				  	<li class="menu_spread_li02"><a href="AssetLibrary.html" class="menu_current_item">AssetLibrary</a></li>
 			  </ul>
 		  </li>
 			<script>
@@ -86,6 +87,7 @@
 				<p>Contents:</p>
 				<ul class="branch_content_ul">
 				<li class="branch_content_li"><a href="Asset.html">Asset Tools</a></li>
+					<li class="branch_content_li"><a href="AssetLibrary.html">资产库 v1 Bate</a></li>
 			</ul>
 			</div>
 			
