--- a/help/html_EN/index.html
+++ b/help/html_EN/index.html
@@ -60,6 +60,7 @@
 		  	<li class="doc_content_li_01"><a href="Modeling/Modeling.html">Modeling</a>
 			  <ul class="doc_content_ul_02">
 			  	<li class="doc_content_li_02"><a href="Modeling/Asset.html">Asset Tools</a></li>
+			  	<li class="doc_content_li_02"><a href="Modeling/AssetLibrary.html">资产库 v1 Bate</a></li>
 			  </ul>
 		    </li>
 		  	<li class="doc_content_li_01"><a href="Rigging/Rigging.html">Rigging</a>
