--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
 		  	<li class="doc_content_li_01"><a href="help/html/Modeling/Modeling.html">Modeling</a>
 			  <ul class="doc_content_ul_02">
 			  	<li class="doc_content_li_02"><a href="help/html/Modeling/Asset.html">Asset Tools&#62;&#62;资产工具</a></li>
+			  	<li class="doc_content_li_02"><a href="help/html/Modeling/AssetLibrary.html">Asset Library&#62;&#62;资产库 v1 Bate</a></li>
 			  </ul>
 		    </li>
 		  	<li class="doc_content_li_01"><a href="help/html/Rigging/Rigging.html">Rigging</a>
