--- a/help/html/Modeling/AssetLibrary.html
+++ b/help/html/Modeling/AssetLibrary.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>AssetTools</title>
+<title>AssetLibrary</title>
 <link href="../../css/stylecommon.css" rel="stylesheet" type="text/css">
 <link href="../../css/style_each.css" rel="stylesheet" type="text/css">
 </head>
@@ -29,7 +29,7 @@
 				<a href="Modeling.html" class="menu_spread_a_top">Modeling <p id="demo"></p></a>
 				</div>
 				<ul class="menu_spread_ul">
-				  <li class="menu_spread_li02"><a href="" class="menu_spread_a">AssetTools&#62;&#62;资产工具</a></li>
+				  <li class="menu_spread_li02"><a href="" class="menu_spread_a">Asset Tools&#62;&#62;资产工具</a></li>
 				  <li class="menu_spread_li02"><a href="" class="menu_current_item">AssetLibrary&#62;&#62;资产库 v1.0 beta</a></li>
 			  </ul>
 		  </li>
@@ -74,9 +74,9 @@
 				  <a href="Modeling.html">Modeling</a>
 				  &#62;
 			  </li>
-			  <li class="nav_content_top_li">AssetTools</li>
+			  <li class="nav_content_top_li">AssetLibrary</li>
 			  <li  class="nav_language_li">
-				  <a href="../../html_EN/Modeling/Asset.html">Translate</a>
+				  <a href="../../html_EN/Modeling/AssetLibrary.html">Translate</a>
 			  </li>
 			  <li></li>
 		  </ul>
@@ -84,9 +84,12 @@
 		  </div>
 		<div class="content">
 		  <div>
-			<h1>AssetTools</h1>
-			<p class="_p">AssetTools工具是zuru的资产库工具，里面包括了zuru项目的模型资产和绑定资产两大模块，每个模块的资产又分为角色、道具和场景。你可以在想要导入的资产上单机右键选择导入方式导入资产。也可以在此提交资产。<br><br><br><img src="../../Resources/AL.webp" width="650" height="360" alt="" id="display_img"/>
+			<h1>AssetLibrary</h1>
+			<p class="_p">AssetLibrary新版本资产库工具，里面包括了zuru项目的模型资产和绑定资产两大模块，每个模块的资产又分为角色、道具和场景。你可以在想要导入的资产上单机右键选择导入方式导入资产。也可以在此提交资产。</p>
+			<p class="_p">Interface description(界面功能描述):<br><img src="../../Resources/Modeling/Mod_1_AssetLibrary_01.png"  width="650" height="360" alt="" id="display_img1" />
+			<p class="_p">How to Use(如何使用):<br><img src="../../Resources/Modeling/Mod_1_AssetLibrary_02.png"  width="650" height="360" alt="" id="display_img2" />
 			</p>
+
 			</div>
 		</div>
 		<footer>
@@ -99,20 +102,26 @@
 </div>
 <div id="img_page" class="img_backgroud">
 	<img src="../../Resources/AL.webp" alt="" width="1959" height="1091"> </div>
+
+
 <script>
-	var imge=document.getElementById("display_img")
-	var text_bk=document.querySelector("text_background");
-	var img_bk=document.getElementById("img_page");
-	var is_img=false;
-	imge.addEventListener("click",img_show)
-	img_bk.addEventListener("click",img_close)
-	
-	function img_show(){
-		img_bk.style.display="block";
-	}
-	function img_close(){
-		img_bk.style.display="none";
-	}
-	</script>
+  var imge1 = document.getElementById("display_img1");
+  var imge2 = document.getElementById("display_img2");
+  var img_bk = document.getElementById("img_page");
+
+  imge1.addEventListener("click", img_show);
+  imge2.addEventListener("click", img_show);
+
+  img_bk.addEventListener("click", img_close);
+
+  function img_show() {
+    img_bk.style.display = "block";
+  }
+
+  function img_close() {
+    img_bk.style.display = "none";
+  }
+</script>
+
 </body>
 </html>
