--- a/help/html/Modeling/Modeling.html
+++ b/help/html/Modeling/Modeling.html
@@ -30,6 +30,7 @@
 				</div>
 				<ul class="menu_spread_ul">
 				  <li class="menu_spread_li02"><a href="Asset.html" class="menu_spread_a">AssetTools&#62;&#62;资产工具</a></li>
+				  <li class="menu_spread_li02"><a href="AssetLibrary.html" class="menu_spread_a">AssetLibrary&#62;&#62;资产库 v1.0 beta</a></li>
 			  </ul>
 		  </li>
 			<script>
@@ -86,6 +87,7 @@
 				<p>Contents:</p>
 				<ul class="branch_content_ul">
 				<li class="branch_content_li"><a href="Asset.html">Asset Tools&#62;&#62;资产工具</a></li>
+				<li class="branch_content_li"><a href="AssetLibrary.html">AssetLibrary&#62;&#62;资产库 v1.0 beta</a></li>
 			</ul>
 			</div>
 			
