--- a/help/html/Modeling/AssetLibrary.html
+++ b/help/html/Modeling/AssetLibrary.html
@@ -3,8 +3,16 @@
 <head>
 <meta charset="utf-8">
 <title>AssetLibrary</title>
-<link href="../../css/stylecommon.css" rel="stylesheet" type="text/css">
-<link href="../../css/style_each.css" rel="stylesheet" type="text/css">
+<script>
+	if(window.screen.width>=1680){
+		document.write('<link href="../../css/stylecommon_large.css" rel="stylesheet" type="text/css">')
+		document.write('<link href="../../css/style_each_large.css" rel="stylesheet" type="text/css">')	
+	}
+	else{
+		document.write('<link href="../../css/stylecommon_small.css" rel="stylesheet" type="text/css">')
+		document.write('<link href="../../css/style_each_small.css" rel="stylesheet" type="text/css">')
+	}
+</script>
 </head>
 
 <body>
@@ -29,8 +37,8 @@
 				<a href="Modeling.html" class="menu_spread_a_top">Modeling <p id="demo"></p></a>
 				</div>
 				<ul class="menu_spread_ul">
-				  <li class="menu_spread_li02"><a href="" class="menu_spread_a">Asset Tools&#62;&#62;资产工具</a></li>
-				  <li class="menu_spread_li02"><a href="" class="menu_current_item">AssetLibrary&#62;&#62;资产库 v1.0 beta</a></li>
+				  <li class="menu_spread_li02"><a href="Asset.html" class="menu_spread_a">Asset Tools&#62;&#62;资产工具</a></li>
+				  <li class="menu_spread_li02"><a href="AssetLibrary.html" class="menu_current_item">AssetLibrary&#62;&#62;资产库 v1.0 beta</a></li>
 			  </ul>
 		  </li>
 			<script>
@@ -85,12 +93,8 @@
 		<div class="content">
 		  <div>
 			<h1>AssetLibrary</h1>
-			<p class="_p">AssetLibrary新版本资产库工具，里面包括了zuru项目的模型资产和绑定资产两大模块，每个模块的资产又分为角色、道具和场景。你可以在想要导入的资产上单机右键选择导入方式导入资产。也可以在此提交资产。</p>
-			<p class="_p">Interface description(界面功能描述):<br><img src="../../Resources/Modeling/Mod_1_AssetLibrary_01.png"  width="650" height="360" alt="" id="display_img1" />
-			<p class="_p">How to Use(如何使用):<br><img src="../../Resources/Modeling/Mod_1_AssetLibrary_02.png"  width="650" height="360" alt="" id="display_img2" />
-			</p>
-
-			</div>
+			<p class="_p">AssetLibrary新版本资产库工具，里面包括了zuru项目的模型资产和绑定资产两大模块，每个模块的资产又分为角色、道具和场景。你可以在想要导入的资产上单机右键选择导入方式导入资产。也可以在此提交资产。<br><br>Interface description(界面功能描述):<br><img src="../../Resources/Modeling/Mod_1_AssetLibrary_01.png"  width="650" height="360" alt="" id="display_img1" /><br><br>How to Use(如何使用):<br><img src="../../Resources/Modeling/Mod_1_AssetLibrary_02.png"  width="650" height="360" alt="" id="display_img2" /></p>
+		  </div>
 		</div>
 		<footer>
 		  <hr>
@@ -101,9 +105,9 @@
 	</section>
 </div>
 <div id="img_page1" class="img_backgroud">
-	<img src="../../Resources/Modeling/Mod_1_AssetLibrary_01.png" alt="" width="1959" height="1091"> </div>
+	<img src="../../Resources/Modeling/Mod_1_AssetLibrary_01.png" alt="" width="1562" height="1100"> </div>
 <div id="img_page2" class="img_backgroud">
-	<img src="../../Resources/Modeling/Mod_1_AssetLibrary_02.png" alt="" width="1959" height="1091"> </div>
+	<img src="../../Resources/Modeling/Mod_1_AssetLibrary_02.png" alt="" width="1700" height="806"> </div>
 
 <script>
   var imge1 = document.getElementById("display_img1");
