--- a/help/html/Modeling/Asset.html
+++ b/help/html/Modeling/Asset.html
@@ -3,8 +3,16 @@
 <head>
 <meta charset="utf-8">
 <title>AssetTools</title>
-<link href="../../css/stylecommon.css" rel="stylesheet" type="text/css">
-<link href="../../css/style_each.css" rel="stylesheet" type="text/css">
+<script>
+	if(window.screen.width>=1680){
+		document.write('<link href="../../css/stylecommon_large.css" rel="stylesheet" type="text/css">')
+		document.write('<link href="../../css/style_each_large.css" rel="stylesheet" type="text/css">')	
+	}
+	else{
+		document.write('<link href="../../css/stylecommon_small.css" rel="stylesheet" type="text/css">')
+		document.write('<link href="../../css/style_each_small.css" rel="stylesheet" type="text/css">')
+	}
+</script>
 </head>
 
 <body>
@@ -29,8 +37,8 @@
 				<a href="Modeling.html" class="menu_spread_a_top">Modeling <p id="demo"></p></a>
 				</div>
 				<ul class="menu_spread_ul">
-				  <li class="menu_spread_li02"><a href="" class="menu_spread_a">AssetTools&#62;&#62;资产工具</a></li>
-				  <li class="menu_spread_li02"><a href="" class="menu_current_item">AssetLibrary&#62;&#62;资产库 v1.0 beta</a></li>
+				  <li class="menu_spread_li02"><a href="Asset.html" class="menu_current_item">AssetTools&#62;&#62;资产工具</a></li>
+				  <li class="menu_spread_li02"><a href="AssetLibrary.html" class="menu_spread_a">AssetLibrary&#62;&#62;资产库 v1.0 beta</a></li>
 			  </ul>
 		  </li>
 			<script>
