--- a/help/html_EN/Modeling/Asset.html
+++ b/help/html_EN/Modeling/Asset.html
@@ -3,8 +3,16 @@
 <head>
 <meta charset="utf-8">
 <title>AssetTools</title>
-<link href="../../css/stylecommon.css" rel="stylesheet" type="text/css">
-<link href="../../css/style_each.css" rel="stylesheet" type="text/css">
+<script>
+	if(window.screen.width>=1680){
+		document.write('<link href="../../css/stylecommon_large.css" rel="stylesheet" type="text/css">')
+		document.write('<link href="../../css/style_each_large.css" rel="stylesheet" type="text/css">')	
+	}
+	else{
+		document.write('<link href="../../css/stylecommon_small.css" rel="stylesheet" type="text/css">')
+		document.write('<link href="../../css/style_each_small.css" rel="stylesheet" type="text/css">')
+	}
+</script>
 </head>
 
 <body>
@@ -29,8 +37,8 @@
 				<a href="Modeling.html" class="menu_spread_a_top">Modeling <p id="demo"></p></a>
 				</div>
 				<ul class="menu_spread_ul">
-				  <li class="menu_spread_li02"><a href="" class="menu_spread_a">AssetTools</a></li>
-				  <li class="menu_spread_li02"><a href="" class="menu_current_item">AssetLibrary</a></li>
+				  <li class="menu_spread_li02"><a href="Asset.html" class="menu_current_item">AssetTools</a></li>
+				  <li class="menu_spread_li02"><a href="AssetLibrary.html" class="menu_spread_a">AssetLibrary</a></li>
 			  </ul>
 		  </li>
 			<script>
@@ -75,10 +83,8 @@
 				  &#62;
 			  </li>
 			  <li class="nav_content_top_li">AssetTools</li>
-			  <li class="nav_content_top_li">AssetLibrary</li>
 			  <li  class="nav_language_li">
 				  <a href="../../html/Modeling/Asset.html">翻译</a>
-				  <a href="../../html/Modeling/AssetLibrary.html">翻译</a>
 			  </li>
 			  <li></li>
 		  </ul>
