--- a/help/html_EN/Modeling/Modeling.html
+++ b/help/html_EN/Modeling/Modeling.html
@@ -3,8 +3,16 @@
 <head>
 <meta charset="utf-8">
 <title>Modeling</title>
-<link href="../../css/stylecommon.css" rel="stylesheet" type="text/css">
-<link href="../../css/style_each.css" rel="stylesheet" type="text/css">
+<script>
+	if(window.screen.width>=1680){
+		document.write('<link href="../../css/stylecommon_large.css" rel="stylesheet" type="text/css">')
+		document.write('<link href="../../css/style_each_large.css" rel="stylesheet" type="text/css">')	
+	}
+	else{
+		document.write('<link href="../../css/stylecommon_small.css" rel="stylesheet" type="text/css">')
+		document.write('<link href="../../css/style_each_small.css" rel="stylesheet" type="text/css">')
+	}
+</script>
 </head>
 
 <body>
@@ -87,7 +95,7 @@
 				<p>Contents:</p>
 				<ul class="branch_content_ul">
 				<li class="branch_content_li"><a href="Asset.html">Asset Tools</a></li>
-					<li class="branch_content_li"><a href="AssetLibrary.html">资产库 v1 Bate</a></li>
+					<li class="branch_content_li"><a href="AssetLibrary.html">AssetLibrary v1.0 Beta</a></li>
 			</ul>
 			</div>
 			
